# URIFramework

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/tests/: CMakeLists.txt
src/tests/identification/: static_identification.cpp
src/tests/parser_writer/: test_json_writer.cpp
src/tests/teach_mode/: read_trj.cpp
